unpackaged/main/default/objects/FinanceTransaction/fields/Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Code__c</fullName>
    <label>Billing Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>