unpackaged/main/default/objects/FinanceTransaction/fields/Credit_GL_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_GL_Account_Name__c</fullName>
    <label>Credit GL Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>