unpackaged/main/default/objects/FinanceTransaction/fields/Credit_Note_Line_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Line_End_Date__c</fullName>
    <label>Credit Note Line End Date</label>
    <type>Date</type>
</CustomField>