unpackaged/main/default/objects/FinanceTransaction/fields/Credit_Note_Line_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Line_Start_Date__c</fullName>
    <label>Credit Note Line Start Date</label>
    <type>Date</type>
</CustomField>