unpackaged/main/default/objects/FinanceTransaction/fields/Debit_GL_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Debit_GL_Account_Name__c</fullName>
    <label>Debit GL Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>