unpackaged/main/default/objects/FinanceTransaction/fields/Etat_Lettrage__c.field-meta.xml
<CustomField>
    <fullName>Etat_Lettrage__c</fullName>
    <description>RI is mentioned on the Revenue transaction, and AL is mentioned on the Tax &amp; Accounts Receivable transaction.</description>
    <label>Etat Lettrage</label>
    <length>5</length>
    <type>Text</type>
</CustomField>