unpackaged/main/default/objects/FinanceTransaction/fields/Finance_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Finance_Book_Name__c</fullName>
    <label>Finance Book Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>