unpackaged/main/default/objects/FinanceTransaction/fields/Finance_Period_Name__c.field-meta.xml
<CustomField>
    <fullName>Finance_Period_Name__c</fullName>
    <label>Finance Period Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>