unpackaged/main/default/objects/FinanceTransaction/fields/Finance_Period_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Period_Status__c</fullName>
    <label>Finance Period Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>