unpackaged/main/default/objects/FinanceTransaction/fields/Invoice_Line_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_End_Date__c</fullName>
    <label>Invoice Line End Date</label>
    <type>Date</type>
</CustomField>