unpackaged/main/default/objects/FinanceTransaction/fields/Invoice_Line_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Start_Date__c</fullName>
    <label>Invoice Line Start Date</label>
    <type>Date</type>
</CustomField>