unpackaged/main/default/objects/FinanceTransaction/fields/Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Name__c</fullName>
    <label>Line Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>