unpackaged/main/default/objects/FinanceTransaction/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Courte Durée</fullName>
            </value>
            <value>
                <fullName>Moyenne Durée</fullName>
            </value>
            <value>
                <fullName>Longue Durée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>