unpackaged/main/default/objects/FinanceTransaction/fields/Numero_de_Compte_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Compte_Salesforce__c</fullName>
    <formula>&quot;CL&quot; &amp; TEXT(VALUE(RIGHT( Account_Number__c, 7)) + 7000000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de Compte Salesforce</label>
    <type>Text</type>
</CustomField>