unpackaged/main/default/objects/FinanceTransaction/fields/Original_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Number__c</fullName>
    <description>Original Number assigned by Salesforce for Invoice and Credit Notes objects when created as Drafts. After posting we additionally, calculate/store the custom formated Posted Invoice Number and Posted Credit Note Number.</description>
    <label>Original Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>