unpackaged/main/default/objects/FinanceTransaction/fields/Parc_Number__c.field-meta.xml
<CustomField>
    <fullName>Parc_Number__c</fullName>
    <label>Parc Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>