unpackaged/main/default/objects/FinanceTransaction/fields/Related_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Related_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store Related Invoice lookup. For Credit Notes resulting from Cancel and Rebill of an Invoice.</description>
    <label>Related Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Finance Transactions</relationshipLabel>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>