unpackaged/main/default/objects/FinanceTransaction/fields/Tax_code__c.field-meta.xml
<CustomField>
    <fullName>Tax_code__c</fullName>
    <description>For:
tax 20% = TN
tax 0% = EXO</description>
    <label>Tax code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>