unpackaged/main/default/objects/FinanceTransaction/fields/Tax_Percentage_Applied__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percentage_Applied__c</fullName>
    <label>Tax Percentage Applied</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>