unpackaged/main/default/objects/FinanceTransaction/fields/Unique_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Unique_Line_Number__c</fullName>
    <formula>IF(ISPICKVAL(Type_Transaction__c,&#39;HT&#39;), TEXT(Line_Number__c*10+3), 
			IF(ISPICKVAL(Type_Transaction__c,&#39;TVA&#39;), TEXT(Line_Number__c*10+2),
     IF(ISPICKVAL(Type_Transaction__c,&#39;TTC&#39;), TEXT(Line_Number__c*10+1),&#39;&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Line Number</label>
    <type>Text</type>
</CustomField>