unpackaged/main/default/objects/FinanceTransaction/fields/VAT_Percentage__c.field-meta.xml
<CustomField>
    <fullName>VAT_Percentage__c</fullName>
    <label>VAT Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>